# parallel-n64

./: .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_NOTES.md  README.md  run-build.sh  run-dump-tests.sh  run-n64.sh  run-tests.sh
.codex/: config.toml
artifacts/: README.md
docs/: EMULATOR_TEST_TASKS.md  EMU_TESTING.md  HIRES_TEXTURE_TASKS.md  PAPER_MARIO_RUNTIME_RESEARCH.md  PROJECT_STATE.md  README.md  WORKSPACE_PATHS.md
docs/agent-first/: PROJECT_STATE.md  README.md  WORKSPACE_PATHS.md
docs/plans/: FIXTURE_AND_EVIDENCE_CONTRACT.md  HIRES_FORMAT_CONFIDENCE_PLAN.md  HIRES_PACK_IMPORT_MODEL.md  N64_EXACT_KEY_DELTA_SHEET.md  N64_IDENTITY_BREAKTHROUGH_PLAN.md  PAPER_MARIO_SIGNAL_TABLE.md  PAPER_MARIO_STATE_AND_FORMAT_PLAN.md  PHASE_0_AGENT_FIRST_TOOLING.md  PHASE_1_HIRES_REPLACEMENT.md  PHASE_2_SCALING_AND_SHARPNESS.md  PHASE_OVERVIEW.md  README.md  claudes_next_steps.md  codexs_plan.md  hires_runtime_primary_plan.md
libretro/: libretro.c
mupen64plus-video-paraLLEl/: parallel.cpp  parallel.h  rdp.cpp  rdp.hpp  rdp_command_ingest.hpp  rdp_frame_fallback_policy.hpp  rdp_frame_mapping.hpp  rdp_scanout_fallback.hpp  rdp_vulkan_glue.hpp
tests/: CMakeLists.txt
tests/emulator_behavior/: CMakeLists.txt  emu_conformance_rdp_command_lengths_test.cpp  emu_conformance_vi_scaling_crop_test.cpp  emu_conformance_vi_scanout_range_test.cpp  emu_unit_hires_capability_policy_test.cpp  emu_unit_hires_ci_palette_policy_test.cpp  emu_unit_hires_lookup_policy_test.cpp  emu_unit_hires_registry_policy_test.cpp  emu_unit_hires_runtime_policy_test.cpp  emu_unit_hires_state_policy_test.cpp  emu_unit_plugin_contract_test.cpp  emu_unit_rdp_command_ingest_test.cpp  emu_unit_rdp_frame_fallback_policy_test.cpp  emu_unit_rdp_frame_mapping_test.cpp  emu_unit_rdp_hires_cache_source_policy_test.cpp  emu_unit_rdp_hires_compat_crc_override_test.cpp  emu_unit_rdp_memory_path_policy_test.cpp  emu_unit_rdp_other_modes_policy_test.cpp  emu_unit_rdp_rect_setup_policy_test.cpp  emu_unit_rdp_scanout_fallback_test.cpp  emu_unit_rdp_tex_rect_policy_test.cpp  emu_unit_rdp_vulkan_glue_test.cpp  emu_unit_smoke_test.cpp  emu_unit_texture_replacement_provider_test.cpp  emu_unit_vi_scale_policy_test.cpp
tests/emulator_behavior/support/: emu_build_runner_contract.sh  emu_conformance_lavapipe_frame_hash.sh  emu_conformance_lavapipe_sm64_frame_hash.sh  emu_conformance_lavapipe_vi_downscale_hash.sh  emu_conformance_lavapipe_vi_filters_hash.sh  emu_conformance_lavapipe_vi_filters_mixed_hash.sh  emu_conformance_oot_hires_boot.sh  emu_conformance_paper_mario_full_cache_phrb_authorities.sh  emu_conformance_paper_mario_full_cache_phrb_authorities_refresh.sh  emu_conformance_paper_mario_full_cache_phrb_authorities_zero_config_refresh.sh  emu_conformance_paper_mario_selected_package_authorities.sh  emu_conformance_paper_mario_selected_package_timeout_lookup_without_probe.sh  emu_conformance_paper_mario_selected_package_timeout_validation.sh  emu_conformance_runtime_smoke.sh  emu_conformance_sm64_hires_boot.sh  emu_dump_validate.sh  emu_hires_alternate_source_activation_review_contract.sh  emu_hires_alternate_source_review_contract.sh  emu_hires_apply_surface_transport_policy_contract.sh  emu_hires_block_family_probe_contract.sh  emu_hires_capability_runtime_contract.sh  emu_hires_capability_source_policy_contract.sh  emu_hires_legacy_evidence_bundle_contract.sh  emu_hires_pack_apply_alias_group_review_contract.sh  emu_hires_pack_apply_duplicate_review_contract.sh  emu_hires_pack_build_selected_package_alias_group_review_contract.sh  emu_hires_pack_build_selected_package_duplicate_review_contract.sh  emu_hires_pack_build_selected_package_review_profile_contract.sh  emu_hires_pack_build_selected_package_surface_transport_policy_contract.sh  emu_hires_pool_regression_review_contract.sh  emu_hires_proxy_binding_auto_select_contract.sh  emu_hires_runtime_seam_register_contract.sh  emu_hires_sampled_alias_group_review_contract.sh  emu_hires_sampled_cross_scene_review_contract.sh  emu_hires_sampled_duplicate_probe_contract.sh  emu_hires_sampled_duplicate_review_contract.sh  emu_hires_sampled_duplicate_review_multi_record_contract.sh  emu_hires_sampled_family_probe_contract.sh  emu_hires_sampled_group_capture_contract.sh  emu_hires_sampled_pool_review_contract.sh  (+55 more)
tests/hires_textures/: CMakeLists.txt  hires_keying_test.cpp  hires_minipack_tool_test.cpp  hires_replacement_provider_decode_matrix_test.cpp  hires_replacement_provider_parser_edge_test.cpp  hires_replacement_provider_test.cpp
tests/rdp_dumps/: README.md  baseline_minimal_eof.rdp
tools/: capture-rdp-dump.sh  hires_alternate_source_activation_review.py  hires_apply_surface_transport_policy.py  hires_block_family_probe.py  hires_build_surface_package.py  hires_canonical_family_selection_review.json  hires_compile_surface_package.py  hires_emit_review_pool_surfaces.py  hires_emit_surface_manifest.py  hires_minipack.py  hires_miss_review.py  hires_pack_apply_alias_group_review.py  hires_pack_apply_duplicate_review.py  hires_pack_build_package.py  hires_pack_build_selected_package.py  hires_pack_common.py  hires_pack_compare_subsets.py  hires_pack_compare_views.py  hires_pack_emit_binary_package.py  hires_pack_emit_binding_aliases.py  hires_pack_emit_bindings.py  hires_pack_emit_loader_manifest.py  hires_pack_emit_probe_pool_binding.py  hires_pack_emit_proxy_bindings.py  hires_pack_emit_subset.py  hires_pack_emit_transport_bridge_bindings.py  hires_pack_expand_binding_pool.py  hires_pack_family_report.py  hires_pack_import_policy.json  hires_pack_inspect_binary_package.py  hires_pack_materialize_package.py  hires_pack_migrate.py  hires_pack_proxy_review.py  hires_pack_review.py  hires_pack_select_transport.py  hires_pack_transport_policy.json  hires_pool_regression_review.py  hires_proxy_candidate_review.py  hires_runtime_overlay_review_profile.json  hires_runtime_overlay_review_transport_policy.json  (+22 more)
tools/adapters/: README.md  retroarch_stdin_session.sh
tools/fixtures/: README.md  fixture-template.yaml  paper-mario-authority-graph.yaml  paper-mario-file-select.yaml  (+6 more)
(+69 files in other folders)
